--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "prisma": "^4.8.0",
     "tailwindcss": "^3.2.1",
     "typescript": "4.8.4"
+  },
+  "volta": {
+    "node": "18.16.1"
   }
 }
